# Boardy

./: .dockerignore  .env.example  .gitignore  1) ElencoGiochi.xlsx  AGENTS.md  CLAUDE.md  Dockerfile  LEARNINGS.md  README.md  TODO.md  boardy-qwen.Modelfile  docker-compose.yml  pyproject.toml  test_local.py
.codex/: hooks.json
.codex/hooks/: check-doc-drift.ps1
app/: audit.py  auth.py  chat.py  conversations.py  db.py  friendly_tags.py  games_semantic.py  llm.py  main.py  ocr.py  rulebooks.py  schema.py  tools.py
bot/: telegram_bot.py  tg_format.py
deploy/: Dockerfile  docker-compose.yml
docs/: LEARNINGS.md  TODO.md  codex-review-brief-2026-06-24.md  prompt-smoke-checklist.md
etl/: backfill_bgg.py  backfill_descriptions_tavily.py  backfill_descriptions_websearch.py  backfill_rulebooks.py  backfill_v2.py  bgg_api.py  bgg_browser.py  bgg_cards_api.py  bgg_files_api.py  cleanup_sleeve.py  create_user.py  embed_descriptions.py  fix_encoding.py  fix_misclassified_sleeve.py  generate_friendly_tags.py  import_excel.py  oci_find_capacity.py  onejour_api.py  purge_bad_lang_rulebooks.py  syg_api.py  sync_sleeved_status.py
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_semantic_marker  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
secondbrain/: memo-auth-caveman.md  memo-boardy-future.md  memo-deploy-caveman.md  memo-deploy-howto.md  memo-telegram-bot.md
tests/: conftest.py  test_chat_cancel.py  test_invariants.py  test_prompt_coverage.py
web/: index.html  library.html  login.html  sleeves.html  wishlist.html
web/static/: auth.js
