[project]
name = "boardy"
version = "0.1.0"
description = "Personal board-game inventory chatbot"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    # Step 2 (rulebook RAG): local embeddings + PDF parsing
    "sentence-transformers>=3.0.0",
    "pypdf>=5.0.0",
    "numpy>=1.26.0",
    "openai>=2.33.0",
    "tavily-python>=0.5.0",
    # Auth (login/sessione cookie firmato). bcrypt 5+ diretto, no passlib
    # (passlib 1.7.4 e' incompatibile con bcrypt>=5 — vedi app/auth.py).
    "bcrypt>=4.0.0",
    "itsdangerous>=2.2.0",
    # Telegram bot (optional client — `uv run python -m bot.telegram_bot`).
    # PTB v21 e' async, gia' batterie incluse (httpx interno per le call API).
    "python-telegram-bot>=21.0",
]

[tool.uv]
package = false
