[project]
name = "boardy"
version = "0.1.0"
description = "Personal board-game inventory chatbot"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    # Step 2 (rulebook RAG): local embeddings + PDF parsing
    "sentence-transformers>=3.0.0",
    # torch dichiarato esplicito (anche se arriva via sentence-transformers)
    # cosi' l'override `[tool.uv.sources]` verso l'indice CPU si applica —
    # uv onora le sources solo sulle dipendenze dirette. Vedi nota sotto.
    "torch>=2.2.0",
    "pypdf>=5.0.0",
    "numpy>=1.26.0",
    "openai>=2.33.0",
    "tavily-python>=0.5.0",
    # Auth (login/sessione cookie firmato). bcrypt 5+ diretto, no passlib
    # (passlib 1.7.4 e' incompatibile con bcrypt>=5 — vedi app/auth.py).
    "bcrypt>=4.0.0",
    "itsdangerous>=2.2.0",
    # Telegram bot (optional client — `uv run python -m bot.telegram_bot`).
    # PTB v21 e' async, gia' batterie incluse (httpx interno per le call API).
    "python-telegram-bot>=21.0",
    # Headless browser per scaricare i file di BGG (l'URL del PDF e' generato
    # via JS → serve eseguire il JS). Solo Chromium. Vedi etl/bgg_browser.py.
    # NB: dopo `uv sync` serve `uv run playwright install chromium` (scarica il
    # binario del browser, ~150MB, fuori dal pacchetto pip).
    "playwright>=1.45.0",
    # OCR dei regolamenti da foto: visione via Google Gemini (DeepSeek non legge
    # immagini — vedi app/ocr.py). Pillow assembla le foto in un PDF per pdf_blob.
    "google-genai>=1.0.0",
    "pillow>=11.0.0",
    "py3langid>=0.3.0",
    # Rasterizza i PDF scansionati (senza layer di testo) in immagini, per darle
    # in pasto all'OCR Gemini. Wheel pure (niente poppler di sistema), arm64 ok.
    "pymupdf>=1.24.0",
]

[tool.uv]
package = false

# torch CPU-only da indice PyTorch dedicato, per TUTTE le piattaforme.
# Boardy fa inferenza e5 sempre su CPU (deploy su VM senza GPU — Oracle Cloud
# Always Free ARM Ampere A1; dev locale su APU AMD senza CUDA usabile). Senza
# questo, il torch di PyPI tira le dipendenze CUDA/nvidia (markate
# `sys_platform == 'linux'`, vero ANCHE su aarch64) → (a) su ARM quelle wheel
# CUDA non esistono e `uv sync --frozen` rompe; (b) ovunque sono GB di CUDA
# inutile nell'immagine. L'indice cpu serve x86_64, aarch64 e win/mac e NON
# ha dipendenze nvidia. (Il marker-per-piattaforma su `[tool.uv.sources]` non
# viene onorato dal lock universale di uv 0.11 → source unconditional.)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# Make the repo root importable so `from app import ...` works without install.
pythonpath = ["."]
testpaths = ["tests"]
